# SMA-Agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  dependency-review.yml  docs.yml  env-protection.yml  lint.yml  pipeline-check.yml  release.yml  security.yml  stale.yml  typecheck.yml
apps/resource_downloader/: engine.py  runner.py
apps/resource_downloader/pipelines/: base.py  duckduckgo.py  giphy.py  pipeline_types.py  pixabay.py  pixabay_video.py  pixels.py  pixels_video.py  register.py  unsplash.py  yt_dlp_music.py  yt_dlp_video.py
apps/story_teller/grammars/: schema.gbnf
apps/story_teller/helper/: local_inference.py
config/: __init__.py  base.py  dev.py  loader.py  prod.py
config/json/: search_terms.json
configs/: base.py  dev.py  prod.py
core/: base_inference.py  paths.py  styling.py
env/: config.env  secrets.env.example
requirements/: pyproject.toml
scripts/: generate_search_terms.py
