[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social_automation-agent"
version = "1.0.0"
description = "A classical product to manage different social media handles."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RajTewari01"}
]
keywords = [
    "socials",
    "social handlers",
    "social management",
    "ai",
    "llms",
    "ffmpeg",
    "automantion agent",
    "socails manager",
    "low-vram"
]  
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/RajTewari01/image-gen"
Documentation = "https://github.com/RajTewari01/image-gen/tree/main/docs"
Repository = "https://github.com/RajTewari01/image-gen"
Issues = "https://github.com/RajTewari01/image-gen/issues"